ch2 finished textual features

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -7,6 +7,9 @@ This section introduces the problem of visual information overload, hints at cur
 % visual content needs interpretation
 Since the increase of bandwidth and connectivity to the web as well as proliferation of online tools and platforms to share content online, much of the web's content is visual. In contrast to textual data that is symbolic and machine readable, the meaning of visual content resides mostly in sensory data (such as sound and visuals). Sensory data needs to be interpreted and thus needs advanced techniques from fields like computer vision and machine learning to process the data.
 
+% Textual data: Whereas textual data can be searched relatively easily because of its symbolic nature, this is more difficult for video. Because visual data on it's own provides little machine-readable handles to search for, repositories of multimedia content need to be indexed with symbolic labels to enable search and retrieval. 
+
+
 % difficult
 
 % for video especially this is a large problem, because of the temporal nature of the medium. Capturing aspect of how a video develops over time is computationally costly and still very time consuming.
