--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -79,7 +79,7 @@ It needs to be said that some reconfiguration of videos is taking place, but eve
 
 examples like: Aaron Koblin (johnny cash project, exquisite corps, etc)
 
-there is even word of a true remix culture.
+there is even word of a true remix culture\cite{Diakopoulos:2007tl}.
 
 the availability of multimedia content via the internet has meant a surge in 
 
